# FireZero

./: Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  tags.lAcQ5K
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
data/: Makefile.am  Makefile.in  firezero.desktop.in  firezero.gresource.xml
data/icons/: Makefile.am  Makefile.in
data/icons/32x32/: Makefile.in
data/icons/32x32/apps/: Makefile.am  Makefile.in
data/icons/48x48/: Makefile.in
data/icons/48x48/apps/: Makefile.am  Makefile.in
data/icons/64x64/: Makefile.in
data/icons/64x64/apps/: Makefile.am  Makefile.in
data/pixmaps/: firezero.xpm
data/ui/: firez-fighter-edit.ui  firez-fighter-edit.ui.backup.old  firez-fighter-edit.ui~  firez-truck-edit.ui
debian/: README.Debian  README.source  changelog  control  copyright  files  firezero.substvars  menu  rules
doc/: FireZero.dia
m4/: intltool.m4  libtool.m4
po/: POTFILES.in  es.po  pt_BR.po
src/: Makefile.am
src/include/: bootstrap_db.h  configure.h
src/include/module/: login.h  managedb.h
src/include/tools/: firez-application.h  firez-window.h
src/init/: Makefile.am  main.c
src/module/: Makefile.am
src/module/login/: Makefile.am  login.c
src/module/managedb/: Makefile.am  README  managedb.c
src/module/map/: map.c
src/tools/: Makefile.am  firez-application.c  firez-window.c
